# gstreamer-vaapi

./: configure.ac
docs/plugins/: Makefile.am
gst-libs/gst/vaapi/: Makefile.am  gstvaapi_fwd.h  gstvaapicontext.c  gstvaapidecoder_h264.c  gstvaapidecoder_h265.c  gstvaapidecoder_jpeg.c  gstvaapidecoder_mpeg2.c  gstvaapidecoder_mpeg4.c  gstvaapidecoder_vc1.c  gstvaapidecoder_vp8.c  gstvaapidecoder_vp9.c  gstvaapidisplay.c  gstvaapidisplay.h  gstvaapidisplay_drm.c  gstvaapidisplay_drm.h  gstvaapidisplay_glx.c  gstvaapidisplay_glx.h  gstvaapidisplay_wayland.c  gstvaapidisplay_wayland.h  gstvaapidisplay_x11.c  gstvaapidisplay_x11.h  gstvaapidisplaycache.c  gstvaapidisplaycache.h  gstvaapiencoder.c  gstvaapiencoder_mpeg2.c  gstvaapifilter.c  gstvaapiobject.c  gstvaapiobject_priv.h  gstvaapipixmap.h  gstvaapipixmap_x11.c  gstvaapitexture_glx.c  gstvaapiutils.h  gstvaapiutils_core.c  gstvaapiwindow.c  gstvaapiwindow_drm.c  gstvaapiwindow_glx.c  gstvaapiwindow_wayland.c  gstvaapiwindow_x11.c  video-format.h
gst/vaapi/: Makefile.am  gstvaapidecodebin.c  gstvaapipluginbase.c  gstvaapipluginutil.c  gstvaapisink.c  gstvaapivideocontext.c  gstvaapivideocontext.h
tests/: Makefile.am  output.c  test-display.c  test-textures.c  test-windows.c
tests/elements/: Makefile.am  test-vaapicontext.c
tests/validate/: vaapi.py
